Updated to the latest version, in particular WBRBCache & related stuff.